onlyargs_derive/compile_tests/default_positional.stderr
error: #[default(...)] can only be used on primitive types
 --> compile_tests/default_positional.rs:5:11
  |
5 |     nums: Vec<u64>,
  |           ^^^
