onlyargs_derive/compile_tests/default_positional.rs
#[derive(Debug, onlyargs_derive::OnlyArgs)]
struct Args {
    #[positional]
    #[default(123)]
    nums: Vec<u64>,
}

fn main() {}
